2019-11-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	libbalsa_message_body_get_mime_type() is guaranteed to return a
	lower case string, so we can safely use strcmp().

	* libbalsa/body.c (libbalsa_message_body_set_parts),
	(libbalsa_message_body_get_pixbuf),
	(libbalsa_message_body_is_flowed):
	* libbalsa/html.c (lbh_cid_cb), (libbalsa_html_type):
	* src/balsa-message.c (mpart_content_name), (display_part),
	(part_create_menu), (libbalsa_can_display), (preferred_part),
	(get_crypto_content_icon), (libbalsa_msg_try_decrypt),
	(libbalsa_msg_perform_crypto_real):
	* src/balsa-mime-widget.c (balsa_mime_widget_new):
	* src/balsa-print-object.c (balsa_print_objects_append_from_body):
	* src/print-gtk.c (find_alt_part), (scan_body):

2019-11-17  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix handling of Multipart/Related

	* libbalsa/body.[ch]: implement a new helper function
	  libbalsa_message_body_mp_related_root() returning the root object
	  of a multipart/related;
	* libbalsa/html.c: pass the HTML body to the Webkit callbacks
	  when printing;
	* src/balsa-message.c: use the new helper for fetching the
	  multipart/related root object;
	* src/print-gtk.c: properly handle multipart/related

2019-11-14  Albrecht Dreß  <albrecht.dress@arcor.de>

	Display S/MIME and TLS certificate chains

	The patch addresses the following:

	S/MIME signatures:
	Currently, Balsa shows the certificate data and the issuer's
	name, serial and chain id.  It is not possible to view the entire
	certification chain.
	The patch adds a button to the issuer section of a S/MIME
	signature, which opens a new dialogue, showing the certification
	tree in the upper and the details of the selected certificate in
	the lower part.  I.e. it is now possible to inspect/verify the
	whole tree, up to the root certificate.  If you have any S/MIME
	signed messages in a mailbox, you can simply test this feature.

	TLS:
	When opening an encrypted SMTP, POP3 or IMAP connection, balsa